--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="selectDate">Сделать до</string>
     <string name="delete">Удалить</string>
     <string name="importance">Важность</string>
+    <string name="changeTheme">Изменить тему</string>
 </resources>
